--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -34,7 +34,7 @@
   min-height: 44px;
   padding: 0;
   background: transparent;
-  background-image: url('../../images/search-btn.svg');
+  background-image: url('../../assets/images/search-btn.svg');
   background-repeat: no-repeat;
   border: none;
   cursor: pointer;
