--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -93,7 +93,7 @@
 /* Стили для бургер-меню в хэдере для зарегистрированного пользователя и экрана <= 768 px  ======================*/
 .nav-burget-btn {
   background: transparent;
-  background-image: url('../../images/burger-icon.svg');
+  background-image: url('../../assets/images/burger-icon.svg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 38px;
@@ -136,7 +136,7 @@
 .nav-burger__close-btn {
   position: absolute;
   background: transparent;
-  background-image: url('../../images/close-btn.svg');
+  background-image: url('../../assets/images/close-btn.svg');
   background-position: center;
   background-repeat: no-repeat;
   border: none;
